        before (all default to FALSE).
  * punbalancedness: extended to calculate unbalancedness measures of nested panel 
                     structures as in Baltagi/Song/Jung (2001).
  * pwartest, pwfdtest: * statistics are labelled as F statistics.
                        * calculations now done without car::linearHypothesis().
  * difft.pseries (note the "t") implemented (non-exported), diff-ing whith
    taking the value of the time dimension into account, analogous to already
    implemented (non-exported) functions lagt.pseries/leadt.pseries.
  * diff.pseries: * logicals can now be diff'ed (result is integer, mimics base::diff).
                  * does not warn anymore if argument 'lag' has length > 1.
  * mtest, sargan: return values gained data.name element.
  * (internal, not exported): residuals_overall_exp.plm and fitted_exp.plm are added
    for testing purposes: residuals_overall_exp.plm always gives the residuals of the
    overall/outer plm model, fitted_exp.plm gives the fitted values (by subtracting
    the overall residuals from the untransformed response variable).
  * pwartest.formula (only formula interface): fixed: ellipsis (dots) was not passed on.
  * print.pseries: prettier printing for integers.
  * summary.pseries: better handling of characters, logicals, factors (use base methods).
  * purtest: cosmetic: when argument 'lags' is not specified by user, the returned
             object does not contain all three possible values in args$lags anymore,
             thus prints prettier.


Changes since version 1.6-5
  
  * pFtest: disable input model check due to reverse dependency of package AER
    (and to allow arbitrary model comparisons); check was erroneously enabled in
    plm version 1.6-4.


Changes since version 1.6-4

  * Argument for supplying a variance-covariance matrix is now consistently named 'vcov'
    across all functions. The old argument '.vcov' of summary.plm is marked as deprecated.